# AI-Infra

./: .env.example  .gitignore  Makefile  README.md  agent-startup-results.json  agent-storm.js  agent.json  api-load-test.js  backend_create_tables.py  backend_create_tables_async.py  backend_create_tables_async_v2.py  baseline-test.js  check_all_services.ps1  docker-compose.new-services.yml  docker-compose.yml  lifecycle-test.js  preflight_check.ps1  results.json  run-tests.bat  seed_data.py  simple.json
agent-autoscaler/: Dockerfile  go.mod  main.go
agent-evolution-engine/: go.mod  main.go
agent-federation-network/: go.mod  main.go
agent-gateway/: Dockerfile  go.mod  main.go
agent-observability/: go.mod  main.go
agent-runtime/: Dockerfile  agent.py  requirements.txt
agent-sandbox-manager/: go.mod  main.go
agent-simulation-engine/: go.mod  main.go
alembic/: env.py
backend/: Dockerfile  config.py  database.py  dependencies.py  health.py  logging_config.py  main.py  models.py  rbac.py  requirements.txt  schemas.py
billing-engine/: go.mod  main.go
cli/: agentplane_cli.py  platform_cli.py  requirements.txt
cluster-controller/: go.mod  main.go
config/: services.yaml
control-brain/: Dockerfile  go.mod  main.go
event-processor/: Dockerfile  go.mod  go.sum  main.go
execution-queue/: Dockerfile  go.mod  go.sum  main.go
executor/: Dockerfile  go.mod  go.sum  main.go  main_test.go
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  (+2 more)
sdk/python/: pyproject.toml
sdk/python/agentcloud/: __init__.py  cli.py  client.py
(+177 files in other folders)
